--- a/V2/client/gaspr/package.json
+++ b/V2/client/gaspr/package.json
@@ -2,24 +2,27 @@
   "name": "angular2-quickstart",
   "version": "1.0.0",
   "scripts": {
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",    
+    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "typings": "typings",
-    "postinstall": "typings install" 
-  },  
+    "postinstall": "typings install"
+  },
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.7",
-    "systemjs": "0.19.22",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "socket.io": "1.7.2",
+    "socket.io-client": "^1.7.3",
+    "systemjs": "0.19.22",
     "zone.js": "0.5.15"
   },
   "devDependencies": {
+    "@types/socket.io-client": "^1.4.29",
     "concurrently": "^2.0.0",
     "lite-server": "^2.1.0",
     "typescript": "^1.7.5"
