--- a/V2/gaspr/package.json
+++ b/V2/gaspr/package.json
@@ -30,6 +30,7 @@
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
+    "@types/socket.io-client": "^1.4.29",
     "angular-cli": "1.0.0-beta.28.3",
     "bootstrap": "^4.0.0-alpha.6",
     "codelyzer": "~2.0.0-beta.1",
@@ -42,6 +43,7 @@
     "karma-remap-istanbul": "^0.2.1",
     "ng2-bootstrap": "^1.6.1",
     "protractor": "~4.0.13",
+    "socket.io-client": "^1.7.3",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.3"
