--- a/V2/gaspr/package.json
+++ b/V2/gaspr/package.json
@@ -27,11 +27,11 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "@types/socket.io-client": "^1.4.29",
-    "angular-cli": "1.0.0-beta.28.3",
     "bootstrap": "^4.0.0-alpha.6",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
