--- a/V2/gaspr/package.json
+++ b/V2/gaspr/package.json
@@ -34,6 +34,8 @@
     "@types/socket.io-client": "^1.4.29",
     "bootstrap": "^4.0.0-alpha.6",
     "codelyzer": "~2.0.0-beta.1",
+    "gulp": "^3.9.1",
+    "gulp-uglify": "^2.1.2",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -45,7 +47,7 @@
     "protractor": "~4.0.13",
     "socket.io-client": "^1.7.3",
     "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "tslint": "^4.5.1",
+    "typescript": "^2.0.10"
   }
 }
