--- a/V2/gaspr/src/tsconfig.json
+++ b/V2/gaspr/src/tsconfig.json
@@ -13,6 +13,13 @@
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
+    ],
+    "types" : [
+      "core-js"
     ]
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
+
 }
