--- a/V2/gaspr/package.json
+++ b/V2/gaspr/package.json
@@ -29,12 +29,13 @@
   "devDependencies": {
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "^2.5.38",
     "@types/node": "^6.0.42",
     "@types/socket.io-client": "^1.4.29",
     "bootstrap": "^4.0.0-alpha.6",
     "codelyzer": "~2.0.0-beta.1",
     "gulp": "^3.9.1",
+    "gulp-typescript": "^3.1.6",
     "gulp-uglify": "^2.1.2",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
