--- a/V2/gaspr/package.json
+++ b/V2/gaspr/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "codelyzer": "~2.0.0-beta.1",
     "gulp": "^3.9.1",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-typescript": "^3.1.6",
     "gulp-uglify": "^2.1.2",
     "jasmine-core": "2.5.2",
